--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "framer-motion": "^10.12.16",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-indiana-drag-scroll": "^2.2.0",
     "react-redux": "^8.0.5",
